# bitchatz-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cmake/: cpack.cmake  functions.cmake  lz4.cmake  noise-c.cmake
extras/docs/: architecture.md  development.md  protocol.md  troubleshooting.md  usage.md
extras/esp32/sketch/: sketch.ino
include/bitchat/core/: bitchat_data.h  bitchat_manager.h  constants.h
include/bitchat/helpers/: compression_helper.h  datetime_helper.h  noise_helper.h  protocol_helper.h  string_helper.h
include/bitchat/identity/: identity_models.h  secure_identity_state_manager.h
include/bitchat/noise/: noise_hybrid_key_exchange.h  noise_post_quantum_key_exchange.h  noise_pq_handshake_pattern.h  noise_protocol.h  noise_protocol_migration.h  noise_role.h  noise_security_error.h  noise_session.h  noise_session_default.h
include/bitchat/platform/: bluetooth_factory.h  bluetooth_interface.h
include/bitchat/protocol/: binary_protocol.h  bitchat_protocol.h  message_padding.h  packet.h  packet_serializer.h
include/bitchat/runners/: bluetooth_announce_runner.h  cleanup_runner.h
include/bitchat/services/: crypto_service.h  identity_service.h  message_service.h  network_service.h  noise_service.h
include/bitchat/ui/: console_ui.h  dummy_ui.h  ui_interface.h
src/: main.cpp
src/bitchat/core/: bitchat_data.cpp  bitchat_manager.cpp
src/bitchat/helpers/: compression_helper.cpp  datetime_helper.cpp  noise_helper.cpp  protocol_helper.cpp  string_helper.cpp
src/bitchat/identity/: identity_models.cpp
src/bitchat/noise/: noise_hybrid_key_exchange.cpp  noise_post_quantum_key_exchange.cpp  noise_pq_handshake_pattern.cpp  noise_protocol.cpp  noise_protocol_migration.cpp  noise_security_error.cpp  noise_session_default.cpp
src/bitchat/protocol/: message_padding.cpp  packet.cpp  packet_serializer.cpp
src/bitchat/runners/: bluetooth_announce_runner.cpp  cleanup_runner.cpp
src/bitchat/services/: crypto_service.cpp  identity_service.cpp  message_service.cpp  network_service.cpp  noise_service.cpp
src/bitchat/ui/: console_ui.cpp  dummy_ui.cpp
tests/: CMakeLists.txt
tests/bitchat/core/: bitchat_manager_test.cpp
tests/bitchat/helpers/: datetime_helper_test.cpp  protocol_helper_test.cpp  string_helper_test.cpp  user_interface_helper_test.cpp
tests/mock/: bluetooth_announce_runner_mock.h  bluetooth_interface_dummy.cpp  bluetooth_interface_dummy.h  bluetooth_interface_mock.h  cleanup_runner_mock.h
